--- a/slices/modules/core/i18n/shared/config/translations/ru.json
+++ b/slices/modules/core/i18n/shared/config/translations/ru.json
@@ -31,7 +31,7 @@
 	"board.help.special.additionalAction": "Некоторые сыщики имеют особые дополнительные действия. Нажмите на эту иконку, чтобы отметить действие как выполненное",
 	"board.help.special.lola": "Нажмите на блок с именем, чтобы сменить текущую роль (класс)",
 
-	"board.help.calculator.result": "Минимальный результат – 0. Деление округляет результат в меньшую сторону. Свайп вправо или влево на текущей формуле стирает последний символ в расчёте.",
+	"board.help.calculator.result": "Минимальный результат – 0. Деление округляет результат в меньшую сторону.",
 	"board.help.calculator.history": "Нажмите на кнопку «Считать», чтобы добавить расчёт в историю. Это значение будет меняться автоматически, если изменятся параметры вашего сыщика. Удерживайте кнопку «Считать», чтобы сохранить расчёт и немедленно запустить проверку, используя полученное значение.",
 	"board.help.calculator.history.actions": "Нажмите и удерживайте сохраненный расчёт, чтобы вытянуть жетон хаоса для проверки навыка по этому расчёту. Свайп влево на сохраненном расчёте открывает меню с опциями:",
 	"board.help.calculator.history.remove": "Удалить расчёт;",
@@ -41,7 +41,7 @@
 	"board.help.pins.press": "На экране планшета нажатие на расчёте открепляет расчёт",
 	"board.help.pins.longPress": "Нажмите и удерживайте закреплённый расчёт, чтобы вытянуть жетон хаоса для данного расчёта.",
 	"board.help.pins.swipe": "Свайп вниз на закреплённом расчёте откроет калькулятор проверок для связанного с этим расчётом навыка.",
-	"board.help.pins.toggle": "Если у вас есть закреплённые расчёты, то они будут отображаться в блоке расчётов на главном экране. Включив «Продвинутый режим» в настройках вы сможете скрывать/показать блок расчетов нажав на него.",
+	"board.help.pins.toggle": "Если у вас есть закреплённые расчёты, то они будут отображаться в блоке расчётов на главном экране. Включив «Продвинутый режим» в настройках вы сможете скрывать/показать блок расчетов нажав на него. В продвинутом режиме свайп вправо открепляет расчёт с экрана",
 
 	"board.help.chaosBag": "Чтобы вытянуть жетон хаоса, нажмите и удерживайте значение навыка",
 	"board.help.chaosBag.returnAll": "Вернуть все вытянутые жетоны в мешок хаоса",
@@ -49,7 +49,7 @@
 	"board.help.chaosBag.token.press": "Нажатие на жетон вернёт его в мешок или удалит, если это [bless] или [curse]",
 	"board.help.chaosBag.token.longPress": "Нажмите и удерживайте на вытянутом жетоне, чтобы его запечатать",
 	"board.help.chaosBag.oneMore": "Нажмите, чтобы вытянуть ещё один жетон",
-	"board.help.chaosBag.swipe": "Свайп вниз на вытянутом жетоне покажет эффект жетого жетона (если он есть и подключена памятка сценария)",
+	"board.help.chaosBag.swipe": "Свайп вниз на иконке жетона открывает историю мешка хаоса, свайп вправо - вытянуть жетон из мешка, свайп вверх - памятка сценария",
 	"board.help.chaosBag.reference": "Открыть справку по жетонам",
 
 	"Modify tokens": "Изменять значения жетонов",
