--- a/slices/modules/core/i18n/shared/config/translations/ru.json
+++ b/slices/modules/core/i18n/shared/config/translations/ru.json
@@ -43,7 +43,7 @@
 	"board.help.pins.swipe": "Свайп вниз на закреплённом расчёте откроет калькулятор проверок для связанного с этим расчётом навыка.",
 	"board.help.pins.toggle": "Если у вас есть закреплённые расчёты, то они будут отображаться в блоке расчётов на главном экране. Включив «Продвинутый режим» в настройках вы сможете скрывать/показать блок расчетов нажав на него. В продвинутом режиме свайп вправо открепляет расчёт с экрана",
 
-	"board.help.chaosBag": "Чтобы вытянуть жетон хаоса, нажмите и удерживайте значение навыка",
+	"board.help.chaosBag": "Чтобы вытянуть жетон хаоса, нажмите и удерживайте значение навыка.",
 	"board.help.chaosBag.returnAll": "Вернуть все вытянутые жетоны в мешок хаоса",
 	"board.help.chaosBag.return": "[token_symbol_fill] - Вернуть все вытянутые жетоны в мешок хаоса (кроме [bless] и [curse])",
 	"board.help.chaosBag.token.press": "Нажатие на жетон вернёт его в мешок или удалит, если это [bless] или [curse]",
@@ -51,6 +51,7 @@
 	"board.help.chaosBag.oneMore": "Нажмите, чтобы вытянуть ещё один жетон",
 	"board.help.chaosBag.swipe": "Свайп вниз на иконке жетона открывает историю мешка хаоса, свайп вправо - вытянуть жетон из мешка, свайп вверх - памятка сценария",
 	"board.help.chaosBag.reference": "Открыть справку по жетонам",
+	"board.help.chaosBag.cancelToken": "[blocked] - Переключает режимы отмены жетона. Изначально выключен. Повторное нажатие отменяет/игнорирует жетон: жетон вытянут из мешка, но его модификатор не учитывается в итоговом значении проверки, а эффект помечается как отменённый. Повторное нажатие с [effect] отменяет только эффект жетона (текст)",
 
 	"Modify tokens": "Изменять значения жетонов",
 
