--- a/slices/modules/core/i18n/shared/config/translations/en.json
+++ b/slices/modules/core/i18n/shared/config/translations/en.json
@@ -39,7 +39,7 @@
 	"board.help.longPress.undo": "Sets change history to the first change",
 
 	"board.help.calculator.toggleKeyboard": "Shows/hides keyboard",
-	"board.help.calculator.clearHistory": "Clears skill check history",
+	"board.help.calculator.clearHistory": "Clears skill test history",
 
 	"board.help.special.additionalAction": "Some investigators have additional actions. Tap on this icon to mark action as completed",
 	"board.help.special.lola": "Tap on the name to change Lola's current role (faction)",
@@ -66,10 +66,10 @@
 	"tapOnPin.advanced": "Tap on a calculation to close the whole block. Swipe right to unpin",
 
 	"modal.skillCheck.clear": "Clear history?",
-	"modal.skillCheck.clear.text": "This action will permanently delete the history of skill checks.",
+	"modal.skillCheck.clear.text": "This action will permanently delete the history of skill tests.",
 
-	"board.help.calculator.difficulty": "Type a number and hold on to it to set a skill check difficulty. Press on a skill check icon at the top of the screen to clear the difficulty",
-	"board.help.calculator.buttons": "Swiping up on numbers 0-9 starts a skill check and adds that number to the check. Swiping down subtracts a number from the check.\nHold the Equals button to save the calculation and immediately run a skill check using the resulting value. Hold a button to set a skill check difficulty",
+	"board.help.calculator.difficulty": "Type a number and hold on to it to set a skill test difficulty. Press on a skill test icon at the top of the screen to clear the difficulty",
+	"board.help.calculator.buttons": "Swiping up on numbers 0-9 starts a skill test and adds that number to the test. Swiping down subtracts a number from the test.\nHold the Equals button to save the calculation and immediately run a skill test using the resulting value. Hold a button to set a skill test difficulty",
 
 	"board.help.calculator.expression": "Swiping right or left on the current formula deletes the last character in the calculation",
 
@@ -111,7 +111,7 @@
 	"board.help.details.clearBoard": "Reset investigator data to the start of the game",
 
 	"Modify scenario tokens": "Modify scenario tokens",
-	"Show skill check result": "Show skill check result",
+	"Show skill test result": "Show skill test result",
 
 	"chaosToken.curse.effect": "{{value}}. Reveal another token. Instead of returning this token to the chaos bag, return it to the token pool.",
 	"chaosToken.bless.effect": "{{value}}. Reveal another token. Instead of returning this token to the chaos bag, return it to the token pool",
@@ -119,17 +119,22 @@
 	"chaosToken.frost.second.effect": "Resolve the test as an automatic failure",
 	"chaosToken.autoFail.effect": "Automatic failure",
 
+	"wild.give": "{{name}} gives {{dativeName}}'s card an extra [wild] until the end of the test",
+	"wild.give.self": "{{name}} gives their own card an extra [wild] until the end of the test",
+
 	"chaosToken.canceled": "This token has been canceled or ignored\n<old>{{effect}}</old>",
 	"chaosToken.canceled.effect": "The token's effect has been canceled\n<old>{{effect}}</old>",
 
-	"chaosToken.remove.confirm.title_one": "Token in skill check",
-	"chaosToken.remove.confirm.title_many": "Tokens in skill check",
+	"chaosToken.remove.confirm.title_one": "Token in skill test",
+	"chaosToken.remove.confirm.title_many": "Tokens in skill test",
 
 	"chaosToken.remove.confirm.subtitle_one": "Remove token?",
 	"chaosToken.remove.confirm.subtitle_many": "Remove tokens?",
 
-	"chaosToken.remove.confirm.text_one": "Token {{token}} is in the skill check. Removing it may change the result cancel the skill check.",
-	"chaosToken.remove.confirm.text_many": "{{count}} tokens {{token}} are in the skill check. Removing them may change the result cancel the skill check.",
+	"chaosToken.remove.confirm.text_one": "Token {{token}} is in the skill test. Removing it may change the result or cancel the skill test.",
+	"chaosToken.remove.confirm.text_many": "{{count}} tokens {{token}} are in the skill test. Removing them may change the result or cancel the skill test.",
+
+	"chaosToken.remove.confirm.return": "Return",
 
 	"chaosBag.addToken_one": "{{name}} adds {{count}} {{token}} token to the chaos bag",
 	"chaosBag.addToken_many": "{{name}} adds {{count}} {{token}} tokens to the chaos bag",
@@ -147,6 +152,10 @@
 	"reveal.startNewConfirm.title": "Continue the skill test?",
 	"reveal.startNewConfirm.text": "You have an unfinished test{{skillCheck}}. Do you want to continue it?",
 	"reveal.startNewConfirm.startNew": "Start new",
+
+	"ability.mateo.base.confirm.title": "Add [elder_sign]?",
+	"ability.mateo.base.confirm.text": "This will add a temporary [elder_sign] token to the test",
+	"ability.mateo.base.confirm.submit": "Add [elder_sign]",
 
 	"Defeated": "Defeated",
 	"Change": "Change",
