feat: asset downloader base

--- a/slices/modules/core/i18n/shared/config/translations/en.json
+++ b/slices/modules/core/i18n/shared/config/translations/en.json
@@ -164,6 +164,9 @@
 	"ability.mateo.base.elderSign.cardAndResource": "Card and [resource]",
 	"ability.mateo.base.elderSign.action": "Action",
 
+	"disk.notEnoughSpace.title": "Not enough free space",
+	"disk.notEnoughSpace.text": "The application requires {{required}}MB of free space",
+
 	"Defeated": "Defeated",
 	"Change": "Change",
 
