--- a/slices/modules/core/i18n/shared/config/translations/ru.json
+++ b/slices/modules/core/i18n/shared/config/translations/ru.json
@@ -7,29 +7,29 @@
 	"picker.deceleration.instant": "Мгновенное",
 	"picker.deceleration.custom": "Настроить",
 
-	"board.help.scroll": "Прокрутите любой параметр сыщика до нужного значения",
+	"board.help.scroll": "Прокрутите любой параметр сыщика до нужного значения.",
 
-	"board.help.press.main": "Уменьшает значение на 1",
-	"board.help.press.action": "Уменьшает значение на 1. Если значение равно 0, сбрасывает счётчик до базового значения",
+	"board.help.press.main": "Уменьшает значение на 1.",
+	"board.help.press.action": "Уменьшает значение на 1. Если значение равно 0, сбрасывает счётчик до базового значения.",
 
-	"board.help.press.undo": "Отменить последнее действие",
-	"board.help.press.redo": "Вернуться к предыдущему действию",
+	"board.help.press.undo": "Отменить последнее действие.",
+	"board.help.press.redo": "Вернуться к предыдущему действию.",
 
-	"board.help.press.skills": "Открывает калькулятор навыков",
+	"board.help.press.skills": "Открывает калькулятор навыков.",
 
-	"board.help.hold.freeArea": "Нажмите и удерживайте в свободном месте для просмотра полученных ран, ужаса и изменённых значений навыков",
+	"board.help.hold.freeArea": "Нажмите и удерживайте в свободном месте для просмотра полученных ран, ужаса и изменённых значений навыков.",
 
-	"board.help.longPress.main": "Показывает/убирает счётчик модификатора. Вы можете изменить базовое значение (например, добавить постоянно +1 к здоровью, -2 к рассудку)",
-	"board.help.longPress.secondary": "Сбрасывает значение до 0",
+	"board.help.longPress.main": "Показывает/убирает счётчик модификатора. Вы можете изменить базовое значение (например, добавить постоянно +1 к здоровью, -2 к рассудку).",
+	"board.help.longPress.secondary": "Сбрасывает значение до 0.",
 
-	"board.help.longPress.redo": "Возвращает историю изменений к последней правке",
-	"board.help.longPress.undo": "Прокручивает историю изменений к начальному состоянию",
+	"board.help.longPress.redo": "Возвращает историю изменений к последней правке.",
+	"board.help.longPress.undo": "Прокручивает историю изменений к начальному состоянию.",
 
-	"board.help.calculator.toggleKeyboard": "Скрывает/показывает клавиатуру",
-	"board.help.calculator.clearHistory": "Очищает историю проверок",
+	"board.help.calculator.toggleKeyboard": "Скрывает/показывает клавиатуру.",
+	"board.help.calculator.clearHistory": "Очищает историю проверок.",
 
-	"board.help.special.additionalAction": "Некоторые сыщики имеют особые дополнительные действия. Нажмите на эту иконку, чтобы отметить действие как выполненное",
-	"board.help.special.lola": "Нажмите на блок с именем, чтобы сменить текущую роль (класс)",
+	"board.help.special.additionalAction": "Некоторые сыщики имеют особые дополнительные действия. Нажмите на эту иконку, чтобы отметить действие как выполненное.",
+	"board.help.special.lola": "Нажмите на блок с именем, чтобы сменить текущую роль (класс).",
 
 	"board.help.calculator.result": "Минимальный результат – 0. Деление округляет результат в меньшую сторону.",
 	"board.help.calculator.history": "Нажмите на кнопку «Считать», чтобы добавить расчёт в историю. Это значение будет меняться автоматически, если изменятся параметры вашего сыщика. Удерживайте кнопку «Считать», чтобы сохранить расчёт и немедленно запустить проверку, используя полученное значение.",
@@ -38,20 +38,20 @@
 	"board.help.calculator.history.setName": "Дать название расчёта;",
 	"board.help.calculator.history.pin": "Закрепить расчёт в списке и на планшете.",
 
-	"board.help.pins.press": "На экране планшета нажатие на расчёте открепляет расчёт",
+	"board.help.pins.press": "На экране планшета нажатие на расчёте открепляет расчёт.",
 	"board.help.pins.longPress": "Нажмите и удерживайте закреплённый расчёт, чтобы вытянуть жетон хаоса для данного расчёта.",
 	"board.help.pins.swipe": "Свайп вниз на закреплённом расчёте откроет калькулятор проверок для связанного с этим расчётом навыка.",
-	"board.help.pins.toggle": "Если у вас есть закреплённые расчёты, то они будут отображаться в блоке расчётов на главном экране. Включив «Продвинутый режим» в настройках вы сможете скрывать/показать блок расчетов нажав на него. В продвинутом режиме свайп вправо открепляет расчёт с экрана",
+	"board.help.pins.toggle": "Если у вас есть закреплённые расчёты, то они будут отображаться в блоке расчётов на главном экране. Включив «Продвинутый режим» в настройках вы сможете скрывать/показать блок расчетов нажав на него. В продвинутом режиме свайп вправо открепляет расчёт с экрана.",
 
 	"board.help.chaosBag": "Чтобы вытянуть жетон хаоса, нажмите и удерживайте значение навыка.",
-	"board.help.chaosBag.returnAll": "Вернуть все вытянутые жетоны в мешок хаоса",
-	"board.help.chaosBag.return": "[token_symbol_fill] - Вернуть все вытянутые жетоны в мешок хаоса (кроме [bless] и [curse])",
-	"board.help.chaosBag.token.press": "Нажатие на жетон вернёт его в мешок или удалит, если это [bless] или [curse]",
-	"board.help.chaosBag.token.longPress": "Нажмите и удерживайте на вытянутом жетоне, чтобы его запечатать",
-	"board.help.chaosBag.oneMore": "Нажмите, чтобы вытянуть ещё один жетон",
-	"board.help.chaosBag.swipe": "Свайп вниз на иконке жетона открывает историю мешка хаоса, свайп вправо - вытянуть жетон из мешка, свайп вверх - памятка сценария",
-	"board.help.chaosBag.reference": "Открыть справку по жетонам",
-	"board.help.chaosBag.cancelToken": "[blocked] - Переключает режимы отмены жетона. Изначально выключен. Повторное нажатие отменяет/игнорирует жетон: жетон вытянут из мешка, но его модификатор не учитывается в итоговом значении проверки, а эффект помечается как отменённый. Повторное нажатие с [effect] отменяет только эффект жетона (текст)",
+	"board.help.chaosBag.returnAll": "Вернуть все вытянутые жетоны в мешок хаоса.",
+	"board.help.chaosBag.return": "[token_symbol_fill] - Вернуть все вытянутые жетоны в мешок хаоса (кроме [bless] и [curse]).",
+	"board.help.chaosBag.token.press": "Нажатие на жетон вернёт его в мешок или удалит, если это [bless] или [curse].",
+	"board.help.chaosBag.token.longPress": "Нажмите и удерживайте на вытянутом жетоне, чтобы его запечатать.",
+	"board.help.chaosBag.oneMore": "Нажмите, чтобы вытянуть ещё один жетон.",
+	"board.help.chaosBag.swipe": "Свайп вниз на иконке жетона открывает историю мешка хаоса, свайп вправо - вытянуть жетон из мешка, свайп вверх - памятка сценария.",
+	"board.help.chaosBag.reference": "Открыть справку по жетонам.",
+	"board.help.chaosBag.cancelToken": "[blocked] - Переключает режимы отмены жетона. Изначально выключен. Повторное нажатие отменяет/игнорирует жетон: жетон вытянут из мешка, но его модификатор не учитывается в итоговом значении проверки, а эффект помечается как отменённый. Повторное нажатие с [effect] отменяет только эффект жетона (текст).",
 
 	"chaosToken.remove.confirm.title_one": "Жетон участвует в проверке",
 	"chaosToken.remove.confirm.title_few": "Жетоны участвуют в проверке",
@@ -68,13 +68,13 @@
 
 	"Modify tokens": "Изменять значения жетонов",
 
-	"board.help.press.chaosBag": "Показывает содержимое мешка хаоса",
-	"board.help.longPress.chaosBag": "Вытягивает жетон хаоса",
+	"board.help.press.chaosBag": "Показывает содержимое мешка хаоса.",
+	"board.help.longPress.chaosBag": "Вытягивает жетон хаоса.",
 
 	"settings.sound": "Звук (Beta)",
 	"settings.syncScenarioClues.hint": "Улики, добавленные на сценарий, удалятся у сыщика",
 
-	"board.help.syncScenarioClues": "Включаeт/выключаeт синхронизацию улик сценария и сыщика: улики, добавленные на сценарий, удалятся у сыщика",
+	"board.help.syncScenarioClues": "Включаeт/выключаeт синхронизацию улик сценария и сыщика: улики, добавленные на сценарий, удалятся у сыщика.",
 
 	"tapOnPin.default": "Нажмите на расчёте, чтобы его убрать",
 	"tapOnPin.advanced": "Нажмите на расчёте, чтобы скрыть блок. Свайп вправо убирает расчёт",
@@ -87,23 +87,23 @@
 	"board.help.calculator.difficulty": "Есть два способа установить сложность проверки:\nа) введите число, нажмите и удерживайте это число в строке формулы;\nб) нажмите и удерживайте цифру на клавиатуре.\nНажмите на иконку навыка наверху экрана, чтобы сбросить установленное значение сложности проверки.",
 	"board.help.calculator.buttons": "Свайп вверх на цифрах 0–9 запускает проверку навыка и добавляет это число к проверке. Свайп вниз вычитает это число из проверки.",
 
-	"board.help.calculator.expression": "Свайп вправо или влево на текущей формуле стирает последний символ в расчёте",
+	"board.help.calculator.expression": "Свайп вправо или влево на текущей формуле стирает последний символ в расчёте.",
 
 	"newGame.start.title": "Начать новую игру?",
 	"newGame.start.text": "Это действие удалит последнюю игру",
 
-	"board.help.swipe.chaosBag": "Свайп вправо вытягивает жетон хаоса. Свайп вниз открывает историю проверок. Свайп вверх открывает памятку сценария",
-	"board.help.press.clue": "Увеличивает значение на 1",
-	"board.help.longPress.investigatorSelect": "Если вы играете за 2+ сыщиков, нажмите и удерживайте на мини-изображении, чтобы посмотреть параметры всех сыщиков",
+	"board.help.swipe.chaosBag": "Свайп вправо вытягивает жетон хаоса. Свайп вниз открывает историю проверок. Свайп вверх открывает памятку сценария.",
+	"board.help.press.clue": "Увеличивает значение на 1.",
+	"board.help.longPress.investigatorSelect": "Если вы играете за 2+ сыщиков, нажмите и удерживайте на мини-изображении, чтобы посмотреть параметры всех сыщиков.",
 
 	"board.help.details": "Детали",
-	"board.help.details.toggle": "Откройте раздел, нажав на блок с текстом сыщика снизу экрана или свайпом вверх. Закройте раздел, нажав в свободное пространство выше счётчиков сценария, стрелку вниз (в правом нижнем углу) или свайпом вниз",
-	"board.help.details.trackers": "Здесь располагаются счётчики сценария: улики, безысходность и ресурсы. Включить нужный счётчик можно в Настройках",
-	"board.help.details.goHome": "Вернуться на главный экран",
-	"board.help.details.info": "Раздел справки (вы сейчас в нём находитесь)",
-	"board.help.details.roundReference": "Интерактивная справка по структуре раунда. Вы можете открыть этот раздел свайпом вправо на описании сыщика (нижний блок на экране)",
+	"board.help.details.toggle": "Откройте раздел, нажав на блок с текстом сыщика снизу экрана или свайпом вверх. Закройте раздел, нажав в свободное пространство выше счётчиков сценария, стрелку вниз (в правом нижнем углу) или свайпом вниз.",
+	"board.help.details.trackers": "Здесь располагаются счётчики сценария: улики, безысходность и ресурсы. Включить нужный счётчик можно в Настройках.",
+	"board.help.details.goHome": "Вернуться на главный экран.",
+	"board.help.details.info": "Раздел справки (вы сейчас в нём находитесь).",
+	"board.help.details.roundReference": "Интерактивная справка по структуре раунда. Вы можете открыть этот раздел свайпом вправо на описании сыщика (нижний блок на экране).",
 	"board.help.details.settings": "Настройки приложения",
-	"board.help.details.clearBoard": "Сбросить данные сыщика на начало игры",
+	"board.help.details.clearBoard": "Сбросить данные сыщика на начало игры.",
 
 	"upkeep.investigator.actionsReset": "{{name}}: действия обновлены",
 
