--- a/slices/modules/core/i18n/shared/config/translations/ru.json
+++ b/slices/modules/core/i18n/shared/config/translations/ru.json
@@ -174,6 +174,8 @@
 
 	"ability.carolyn.modal.heal": "Вылечить",
 
+	"ability.preston.modal.text": "Потратить 2 [resource], чтобы автоматически пройти эту проверку?",
+
 	"heal.horror_one": "{{fromName}} лечит {{dativeName}} {{count}} ужас",
 	"heal.horror_few": "{{fromName}} лечит {{dativeName}} {{count}} ужаса",
 	"heal.horror_many": "{{fromName}} лечит {{dativeName}} {{count}} ужасов",
