--- a/slices/modules/core/i18n/shared/config/translations/ru.json
+++ b/slices/modules/core/i18n/shared/config/translations/ru.json
@@ -17,7 +17,7 @@
 
 	"board.help.press.skills": "Открывает калькулятор навыков.",
 
-	"board.help.hold.freeArea": "Нажмите и удерживайте в свободном месте для просмотра полученных ран, ужаса и изменённых значений навыков.",
+	"board.help.hold.freeArea": "Нажмите и удерживайте в свободном месте для просмотра полученных ран, ужаса и изменённых значений навыков. Свайп влево переключит на планшет предыдущеего сыщика, свайп вправо - на следующего",
 
 	"board.help.longPress.main": "Показывает/убирает счётчик модификатора. Вы можете изменить базовое значение (например, добавить постоянно +1 к здоровью, -2 к рассудку).",
 	"board.help.longPress.secondary": "Сбрасывает значение до 0.",
