feat: static picker

--- a/slices/modules/core/i18n/shared/config/translations/en.json
+++ b/slices/modules/core/i18n/shared/config/translations/en.json
@@ -202,6 +202,8 @@
 	"Defeated": "Defeated",
 	"Change": "Change",
 
+	"Picker animation": "Picker animation",
+
 	"Show initial Health/Sanity": "Show initial Health/Sanity",
 
 	"Chaos bag loading animation": "Chaos bag loading animation",
