--- a/slices/modules/core/i18n/shared/config/translations/ru.json
+++ b/slices/modules/core/i18n/shared/config/translations/ru.json
@@ -220,6 +220,8 @@
 
 	"Negative values": "Отрицательные значения",
 
+	"Picker animation": "Анимация прокрутки",
+
 	"Show Game Text": "Игровой текст",
 	"Advanced": "Продвинутый режим",
 	"Pinned calculations": "Закреплённые расчёты",
