feat: swipe left / right picker gestures

--- a/slices/modules/core/i18n/shared/config/translations/ru.json
+++ b/slices/modules/core/i18n/shared/config/translations/ru.json
@@ -9,6 +9,8 @@
 
 	"board.help.scroll": "Прокрутите любой параметр сыщика до нужного значения.",
 
+	"board.help.swipeLeft.main": "Уменьшает базовое значение на 1.",
+	"board.help.swipeRight.main": "Увеличивает базовое значение на 1.",
 	"board.help.press.main": "Уменьшает значение на 1.",
 	"board.help.press.action": "Уменьшает значение на 1. Если значение равно 0, сбрасывает счётчик до базового значения.",
 
