--- a/slices/modules/core/i18n/shared/config/translations/en.json
+++ b/slices/modules/core/i18n/shared/config/translations/en.json
@@ -23,8 +23,8 @@
 	"board.reset.text": "This action will reset the data to the beginning of the game for this investigator",
 	"board.help.scroll": "You can change any investigator value by scrolling a picker to a needed position",
 
-	"board.help.swipeLeft.main": "Decrease base value by 1.",
-	"board.help.swipeRight.main": "Increase base value by 1.",
+	"board.help.swipeLeft.main": "Swipe left to decrease base value by 1.",
+	"board.help.swipeRight.main": "Swipe right to increase base value by 1.",
 	"board.help.press.main": "Decrease value by 1",
 	"board.help.press.action": "Decrease value by 1. If value is 0, resets counter to its base value",
 
