--- a/slices/modules/core/i18n/shared/config/translations/en.json
+++ b/slices/modules/core/i18n/shared/config/translations/en.json
@@ -46,8 +46,8 @@
 
 	"board.help.special.additionalAction": "Some investigators have additional actions. Tap on this icon to mark action as completed",
 	"board.help.special.lola": "Tap on the name to change Lola's current role (faction)",
-	"board.help.special.daniela": "Click [claws] if an enemy attacked you. This will change the value of [elder_sign] for a successful test.",
-	"board.help.special.kymani": "Click [exhaust] if there is an exhausted enemy at your location. This will change the value of [elder_sign] for a successful test.",
+	"board.help.special.daniela": "Tap [claws] if an enemy attacked you. This will change the value of [elder_sign] for a successful test.",
+	"board.help.special.kymani": "Tap [exhaust] if there is an exhausted enemy at your location. This will change the value of [elder_sign] for a successful test.",
 
 	"board.help.chaosBag": "Tap and hold on a skill value to reveal a chaos token",
 	"board.help.chaosBag.returnAll": "Return all revealed tokens to the chaos bag",
