feat: added loading translations

--- a/assets/i18n/loading/en.json
+++ b/assets/i18n/loading/en.json
@@ -94,5 +94,39 @@
   "Putting the investigators to sleep",
   "Preparing the chaos bag",
   "Mulliganing cards in secret",
-  "Negotiating with an Elite enemy"
+  "Negotiating with an Elite enemy",
+  "Helping Daisy carry books home",
+  "Going to Zoey’s Sunday dinner",
+  "Taking acting lessons from Lola",
+  "Telling Carolyn about our nightmares",
+  "Escaping with Wendy through the fire escape",
+  "Asking Preston to pay for everyone’s dinner",
+  "Playing poker with Skids",
+  "Walking with Duke in the park",
+  "Asking Mark not to call it a 'scratch'",
+  "Listening to Ursula’s stories about lost temples",
+  "Checking if Rex left his clues at the bar",
+  "Arguing with Minh about the rules",
+  "Asking Roland where he hid the clues",
+  "Asking Stella to deliver the mail on time",
+  "Cracking a case with Joe",
+  "Asking Tony not to bring work on a date",
+  "Rewriting a ritual with Jacqueline",
+  "Helping Akachi finish an amulet",
+  "Waiting for Silas to come back from fishing",
+  "Watching Dexter’s magic tricks",
+  "Visiting Sefina’s art exhibition",
+  "Convincing Zoey not to bring a knife to church",
+  "Asking Wendy to make breakfast out of nothing",
+  "Listening to Gloria’s weather forecast",
+  "Asking Amanda to do homework for everyone",
+  "Waiting for Lily to finish her morning training",
+  "Asking Darrell to take a photo 'without tentacles in the frame'",
+  "Arguing with Carson about who does the dishes",
+  "Waiting for Calvin to pull himself together again",
+  "Buying a shovel for Yorick",
+  "Getting a medical note from Vincent",
+  "Catching up with Rita",
+  "Asking Bob for a 'friends and family' discount",
+  "Celebrating the success of 'The King in Yellow'"
 ]
