--- a/assets/i18n/loading/ru.json
+++ b/assets/i18n/loading/ru.json
@@ -132,5 +132,6 @@
   "Покупаем лопату для Йорика",
   "Покупаем справку у Винсента",
   "Догоняем Риту",
-  "Просим Боба сделать скидку «для друзей»"
+  "Просим Боба сделать скидку «для друзей»",
+  "Отмечаем успех «Короля в жёлтом»"
 ]
