feat: random loading text

--- a/assets/i18n/loading/ru.json
+++ b/assets/i18n/loading/ru.json
@@ -98,7 +98,7 @@
   "Учим каплю поглощать всё",
   "Усыпляем сыщиков",
   "Готовим мешок",
-  "Мулиганим карты втайне ото всех",
+  "Мулиганим карты пятый раз в тайне ото всех",
   "Договариваемся с элитным врагом",
   "Помогаем Дэйзи донести книги домой",
   "Идём к Зои на воскресный обед",
@@ -133,5 +133,11 @@
   "Покупаем справку у Винсента",
   "Догоняем Риту",
   "Просим Боба сделать скидку «для друзей»",
-  "Отмечаем успех «Короля в жёлтом»"
+  "Отмечаем успех «Короля в жёлтом»",
+  "Ищем протекторы 200мкм",
+  "Покупаем базу ради набора контактов",
+  "Покупаем коробку Возвращения ради коробки",
+  "Выбираем яхту Акулову",
+  "Ищем капсулы для жетонов",
+  "Запускаем пиявок в болота"
 ]
